[package]
name = "final-state-rs"
version = "0.1.0"
edition = "2021"
license = "MIT"
description = "Final State Compression in Rust"
keywords = ["fse", "encryption", "compression"]
authors = ["Adrien Zinger <zinger.ad@gmail.com>"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tiny-bitstream = "0"
rayon = { version = "1.7.0", optional = true }

[dev-dependencies]
rand = "0.8.4"
criterion = "0.3"


[[bench]]
name = "counters"
harness = false

[[bench]]
name = "normalization"
harness = false

[[bench]]
name = "spreads"
harness = false

[features]
default = ["rayon", "checks"]
rayon = [ "dep:rayon" ]
checks = []